# ReadChop

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  readchop.sh
example/: example.fasta  example.fastq  ont_bc_index.list  ont_bc_pattern.db
src/: args.rs  counter.rs  fastq.rs  main.rs  myers.rs  pattern.rs  splitter.rs  thread_pool.rs  utils.rs  view.rs  writer.rs
